@@ -1,5 +1,12 @@
 2007-02-12  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimppropwidgets.c
+	* libgimpwidgets/gimppropwidgets.c: most property widgets rely on
+	a writable property. Check for that or make the widget non-editable
+	if the G_PARAM_WRITABLE flag is unset.
+
+2007-02-12  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpcontrollereditor.c: minor refactoring.
 
 	* libgimpwidgets/gimppropwidgets.c (gimp_prop_label_new): allow
